--- a/bookdown/24-x11.Rmd
+++ b/bookdown/24-x11.Rmd
@@ -1,5 +1,43 @@
 ## X11
 
+One of the two main seasonal methods available in X-13ARIMA-SEATS to extract trend and seasonal components is the ``X-11'' method. 
+This is a nonparametric procedure that works by passing moving-average filters over the data to extract intended components.
+In order to use symetric moving average filters at the end of the time series (current value), a regARIMA model is used to forecast extend the series.
+This RegARIMA model is where users can test for or specify outliers, trading day and moving holiday regressors in their adjustment.
+This forecast extended series is then used to filter.
+Additionally, X-11 has a built in extreme value procedure included.
+This procedure identifies extremes and replaces. 
+This results in a robust procedure that can automatically choose filters and identify extreme values without much user intervention.
+All that needs to be evoked beyond the default 'seas()' call is to turn on the X11 spec option.
+
+```{r}
+library(seasonal)
+m <- seas(AirPassengers, x11 = "")
+```
+
+Before further discussion about the details of the X-11 process, let us see what happened during this modeling run...
+
+When using the x11 spec you can change the length of the filter used for the trend and seasonal components with the `trendma` and `seasonalma` arguments respectively.
+Additionally, `sigmalim` will control the amount of extreme value adjustment that is done during the seasonal adjustment.
+
+The X-13ARIMA-SEATS development was highly motivated to study economic time series.
+As such, the default seasonal adjustment mode is multiplicative due to most seasonal economic time series displaying seasonal fluctuations that increase and decrease along with the level of the time series.  
+If your series does not have this feature then additive adjustment might be more appropriate.
+This can be changed in the `mode` argument of the x11 spec. 
+For example, `seas(x, x11.mode = 'add')` will perform an additive x11 run.
+There exist two other models for decomposition, pseudo-additive and log additive.
+These are less common than additive and multiplicative models and are not the focus of this text.
+If your series has some extremely small values in certain months (quarters) then pseudo-additive models could be worth further investigation. 
+It has been observed that when multiplicative seasonal adjustment produces more extreme values in conjunction with small seasonal factors then pseudo-additive adjustment should be explored.
+NEED TO SHOW USERS HOW TO VIEW THEIR EXTREME VALUES - D8.B TABLE DESIGNATIONS NEXT TO OBSERVATIONS.
+A good reference on the subject is Baxter (1994).
+
+The X11 spec also allows users to control the length of the trend and seasonal moving average filters used during the adjustment. 
+Generally speaking, longer filters imply a more stable seasonal component and shorter filters a more changing seasonal pattern. 
+If a filter is not choosen by the user then automatic filter selection is used.
+
+
+
 - How to use the X11 spec
 
 - Case Study: Changing the length of trend and/or seasonal filter
