--- a/topics/dailyadj/vignettes/overview.Rmd
+++ b/topics/dailyadj/vignettes/overview.Rmd
@@ -56,34 +56,62 @@ Let's start with a simple model.
 
 Perhaps because of their simplicity, these kind of adjustments are frequently found in the literature. E.g., timmermans 18, lengwiler, (forthcoming, ask Ronald)
 
-[The following code is not correct, needs a bit of work]
 
+We start by constructing a dummy variables with weekday and monthly effects:
 ```{r, arimax, cache = TRUE}
-
 dums <-
   x %>%
-  mutate(wday = lubridate::wday(time)) %>%
-  mutate(month = lubridate::month(time)) %>%
+  mutate(wday = lubridate::wday(time, label = TRUE)) %>%
+  mutate(month = lubridate::month(time, label = TRUE)) %>%
   select(time, wday, month) %>%
-  fastDummies::dummy_cols("wday", remove_first_dummy = TRUE, remove_selected_columns = TRUE) %>%
-  fastDummies::dummy_cols("month", remove_first_dummy = TRUE, remove_selected_columns = TRUE)
+  fastDummies::dummy_cols("wday", remove_selected_columns = TRUE) %>%
+  fastDummies::dummy_cols("month", remove_selected_columns = TRUE) %>%
+  select(-wday_Mon, -wday_Sat, -wday_Sun, -month_Jan)
 
 dums
+```
+
+These variables can be used as exogenous variables in a ARIMA model. We use `forecat::auto.arima()` to determine the ARMA order. Note that we do not want to use the seasonal part of the model, since we use dummies for this purpose.
+
+```{r, arimax, cache = TRUE}
 
 # ARMA
 fit <- auto.arima(x$value, stationary = TRUE, seasonal = FALSE, xreg = as.matrix(dums[, -1]))
 
-z <- x
-z$seas <- forecast(fit, xreg = as.matrix(dums[, -1]))$mean
+adj <- x
+adj$value <- as.numeric(fit$fitted)
 
-z %>%
-  mutate(adj = value - seas) %>%
-  select(time, adj, value) %>%
-  ts_long() %>%
-  ts_plot()
-
+ts_plot(adj, x)
 
 ```
+
+
+The nice think about the dummy model is that its seasonal effects are very easy to interprete. By construction, they are constant over time, and can be visualized as follows:
+
+```{r, arimax, cache = TRUE}
+
+enframe(coef(fit)) %>%
+  filter(grepl("wday", name)) %>%
+  mutate(name = gsub("wday_", "", name)) %>%
+  mutate(name = factor(name, levels = unique(name))) %>%
+  ggplot(aes(x = name, y = value)) +
+    geom_col() +
+    ggtitle("Weekday effects", subtitle = "Baseline: Monday")
+
+
+enframe(coef(fit)) %>%
+  filter(grepl("month", name)) %>%
+  mutate(name = gsub("month_", "", name)) %>%
+  mutate(name = factor(name, levels = unique(name))) %>%
+  ggplot(aes(x = name, y = value)) +
+    geom_col() +
+    ggtitle("Month effects", subtitle = "Baseline: January")
+
+```
+
+We see that, on average, transcations are lower on tuesday and thursay and peak on wednesday. We also see that, on average, transactions are higher in the first half of the year.
+
+
 
 ### STL
 
