--- a/topics/dailyadj/vignettes/overview.Rmd
+++ b/topics/dailyadj/vignettes/overview.Rmd
@@ -3,6 +3,8 @@ output: github_document
 ---
 
 
+
+
 # Seasonal adjustment of daily time series in R: An overview
 
 Automated data processing and the Internet have brought an enormous increase in data that is processed on a high frequency, e.g., at a daily, hourly or even higher frequency.
@@ -11,16 +13,24 @@ X-13ARIMA-SEATS offers a well tested and time proven way of adjusting monthly, q
 
 This [article/chaper/post] discusses how to perform seasonal adjustment on a higher frequency. We focus on daily data, as this is the most common use case, but will briefly discuss some challenges involving weekly or intra-day adjustments.
 
-Despite the large interest, there is not much consensus on the appropriate adjustment method for daily series. Adjusting daily series often involves a substantial amount of trial and error, subjective judgment and exploration. This [article/chapter/post] gives an overview of the tools that are currently (2020) available in R.
+Despite the large interest, there is not much consensus on the appropriate adjustment method for daily series. Adjusting daily series often involves a substantial amount of trial and error, subjective judgment and exploration. This [article/chapter/post] gives an overview of the tools that are currently (2021) available in R.
+
+
+## Contribution of this [article/chaper/post]
+
+- Discuss literature on daily seasonal adjustment
+- Overview of available methods in R (including examples)
+- OOS forecast evaluation of available methods in R
+- Discuss specific problems
 
 
 ## Problems
 
 Daily seasonal adjustment comes with a few challenges that are not present in lower frequency data.
-Let's focus on daily ice-cream sales.
+Let's focus on daily traffic casualties.
 
-First, daily data comes at multiple periodicities: There is an annual periodicity, such as the effect of the temperature in the summer.
-Then there is a weekly periodicity. Ice-cream sales may be higher during the weekends. For some series, there may be also a monthly periodicity. If people are get their salaries by the end of the month, they may be more likely to perform certain investments.
+First, daily data comes at multiple periodicities: There is an annual periodicity, such as the effect of weather condiditions or holiday patterns.
+Then there is a weekly periodicity. Casualities may be higher during the weekdays, due to increased work traffic. For some series, there may be also a monthly periodicity. If people are get their salaries by the end of the month, they may be more likely to perform certain investments.
 
 Second, many daily data series are available for a few years only. Whily, e.g., the SEATS adjustment requires a minimal series length of XX years, many daily series are shorter.
 
@@ -47,8 +57,7 @@ We focus on a single time series, and describe the concrete steps that are requi
 library(dailyadj)
 library(tsbox)
 
-x <- casualities
-
+x <- casualties
 
 ts_plot(x)
 
@@ -120,7 +129,9 @@ We see that, on average, transcations are lower on Sunday and peak on Friday. We
 
 ### STL
 
-This package contains a simple implementation of STL
+This package contains a very simple implementation of STL that works in many circumstances.
+
+
 
 ```{r, stl, cache = TRUE}
 
@@ -132,11 +143,15 @@ seas_daily(x) %>%
 
 ### dsa
 
+Similarly in spirit, the dsa packages implements a version of STL that works well in many circumstances, but is computationally slow.
+The following code automatlically decomposes `casulties`.
+
+
 ```{r, dsa, cache = TRUE}
 
 library(dsa)
-
 z <- dsa::dsa(ts_xts(x))
+plot(z, dy = FALSE)
 
 ```
 
@@ -144,6 +159,8 @@ z <- dsa::dsa(ts_xts(x))
 
 ```{r, prophet, cache = TRUE}
 library(prophet)
+
+
 df <- rename(x, ds = time, y = value)
 m <-
   prophet(daily.seasonality = FALSE) %>%
@@ -179,7 +196,7 @@ x_ts <- ts_ts(x)
 head(x_ts)
 ```
 
-[Probably don't show everything. This one contributes nothing]
+[Probably don't show everything. This one is useless]
 
 ```{r, stlf, cache = TRUE}
 m <- stlf(x_ts)
@@ -202,31 +219,32 @@ ts_plot(x, adj)
 
 ## Evaluation
 
-Based on the example above, compare according to the following criteria:
+
+Which method should you choose? [discuss criterions]
 
 
 ### Out-of-sample forecast
 
-As in (timmermans 18).
+
+As in (Timmermans 18), the following produces OOS forecasts for the twelve last months for UK traffic deaths. We apply `dailyseas::eval_oos()` to perform an OOS forecast evaluation for all models.
+
+The full OOS results can be found [here](https://github.com/christophsax/x13book/blob/master/topics/dailyadj/vignettes/overview.md)
+
+[I think the detailed OOS results are quite interesting, as they show you what a method 'gets' and what it does not.]
+
+Here is the table for two sereis, all models [it is realtively easy to extend that...]
 
 
-The function `dailyseas::eval_oos()` performs an OOS forecast evaluation for all models.
-
-[TODO this still needs to be implemented, but I have most of the code needed for it.
-
-dsa is probably the best, prophet 2nd, and then the rest. My stl procedure is also decent.]
-
-[Main Table like this:]
-
-```
-seas\_stlf     Mean       19917. 14809. 0.122
-seas\_prophet  Mean       19082. 13934. 0.117
-seas\_dsa      Mean       19082. 13934. 0.117
-...
-```
 
 
-### Other Criteria??
+
+
+prophet, dsa, and my stl work realatively good, the other methods are not working very well.
+
+
+### Other Criteria
+
+What other criteria could we look at?
 
 - Variance?
 
@@ -245,6 +263,33 @@ prophet:     10.181
 dsa:        145.553
 ```
 
+
+
+## Other challenges
+
+
+[Discuss some other challenges of daily seas adj]
+
+
+### Short series
+
+Many daily time series are short. What does it mean with respect to the discussion above. If I have only 3 years of data, which methods still work?
+
+
+### Calendar effects
+
+[Will try to improve my method on that, prophet and dsa do somehting about it.
+Could provide an example, OOS comparison]
+
+
+### Cross Seasonal Effects
+
+If month effects (e.g., salary payment at the end of a month) collide with week effects (e.g., weekend), we can get some patterns that are very hard to model. How relevant is the problem? What should you be done about it?
+
+
+### Series specific effects
+
+Transaction series have an end of months effect (Timmermans 18), but we don't find it in other data. How to deal with such things?
 
 
 ## Conclusions
