include nzimm data

--- a/topics/dailyadj/vignettes/overview.tex
+++ b/topics/dailyadj/vignettes/overview.tex
@@ -444,23 +444,23 @@ Here is the table for two series, showing the mean percentage deviation:
 
 \begin{Schunk}
 
-\begin{tabular}{l|r|r}
+\begin{tabular}{l|r|r|r|r}
 \hline
-model & casualties & transact\\
+model & casualties & nzimmigration\_dep & transact & nzimmigration\_arr\\
 \hline
-dummy & 0.1564534 & 0.1554219\\
+dummy & 0.1564534 & 0.1588066 & 0.1554219 & 0.2100923\\
 \hline
-daily & 0.1101139 & 0.1105550\\
+daily & 0.1106591 & 0.1853071 & 0.1105100 & 0.1771529\\
 \hline
-dsa & 0.0976475 & 0.1016794\\
+dsa & 0.0976475 & 0.1225965 & 0.1016794 & 0.1639907\\
 \hline
-prophet & 0.1049195 & 0.1165156\\
+prophet & 0.1049195 & 0.1338138 & 0.1165156 & 0.1393448\\
 \hline
-harmon & 0.1234707 & 0.1542884\\
+harmon & 0.1234707 & 0.1647413 & 0.1542884 & 0.2055786\\
 \hline
-tbats & 0.1314058 & 0.1306881\\
+tbats & 0.1314058 & 0.2203225 & 0.1306881 & 0.2771999\\
 \hline
-naive & 0.1402331 & 0.1710234\\
+naive & 0.1402331 & 0.1885460 & 0.1710234 & 0.1842106\\
 \hline
 \end{tabular}
 
